# GoogleTestConfig

FetchFramework/: CMakeLists.txt
GMockTest/: .gitignore  CMakeLists.txt
GMockTest/Tests/: validatorTest.cpp
LocalFramework/: CMakeLists.txt  defines.h
LocalFramework/Tests/: sumTest.cpp
NonCmakeFramework/: Makefile  sum.c  sum.h  sumTest.cpp
ParameterizedTestFixture/: CMakeLists.txt  Makefile  Validator.cpp  Validator.hpp  defines.h  main.cpp
ParameterizedTestFixture/Tests/: validatorTest.cpp
SystemFramework/: CMakeLists.txt  main.c
TestFixture/: Account.cpp  Account.hpp  CMakeLists.txt  defines.h
TestFixture/Tests/: accountTest.cpp
